cabal-version:      2.4
name:               pokeapi
version:            0.1.0.0
synopsis:           Interface to PokeAPI, the REST API for Pokemon data

-- A longer description of the package.
-- description:
homepage:           https://github.com/penelopeysm/pokeapi

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Penelope Yong
maintainer:         penelopeysm@gmail.com

category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Pokeapi,
                      Pokeapi.Types

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings, ScopedTypeVariables

    build-depends:    base ^>=4.17.1.0,
                      aeson,
                      bytestring,
                      mtl,
                      req,
                      text,

    hs-source-dirs:   src
    default-language: Haskell2010

executable pokeapi
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.1.0,
        pokeapi,
        text

    default-extensions: OverloadedStrings, ScopedTypeVariables

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite pokeapi-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.17.1.0
