cabal-version:      2.4
name:               pokeapi
version:            1.0.0.0
synopsis:           Interface to PokeAPI v2 REST API
description:        Haskell interface to the [v2 REST API of PokeAPI](https://pokeapi.co/docs/v2.html). See the "Pokeapi" module for documentation.
homepage:           https://github.com/penelopeysm/pokeapi

bug-reports:        https://github.com/penelopeysm/pokeapi/issues
license:            MIT
license-file:       LICENSE
author:             Penelope Yong
maintainer:         penelopeysm@gmail.com
category:           Web
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: git://github.com/penelopeysm/pokeapi.git

library
    exposed-modules:    Pokeapi
    default-extensions: OverloadedStrings, ScopedTypeVariables
    build-depends:      base ^>=4.16 || ^>=4.17 || ^>=4.18,
                        aeson, bytestring, mtl, req, text, modern-uri
    hs-source-dirs:     src
    default-language:   Haskell2010
