cabal-version:      2.4
name:               pokeapi
version:            1.0.0.0
synopsis:           Interface to PokeAPI v2 REST API
description:        Haskell interface to the [v2 REST API of PokeAPI](https://pokeapi.co/docs/v2.html). See the "Pokeapi" module for documentation.
homepage:           https://github.com/penelopeysm/pokeapi

bug-reports:        https://github.com/penelopeysm/pokeapi/issues
license:            MIT
license-file:       LICENSE
author:             Penelope Yong
maintainer:         penelopeysm@gmail.com
category:           Web
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: git://github.com/penelopeysm/pokeapi.git

library
    exposed-modules:    Pokeapi
    -- Pull requests to expand the version range are welcome
    build-depends:      base        ^>=4.16   || ^>=4.17 || ^>=4.18,
                        aeson       >= 2.2.0  && < 2.3,
                        bytestring  >= 0.11.4 && < 0.12,
                        mtl         >= 2.2.2  && < 2.3,
                        filepath    >= 1.4.2  && < 1.5,
                        text        >= 2.0.2  && < 2.1,
                        directory   >= 1.3.7  && < 1.4,
                        modern-uri  >= 0.3.6  && < 0.4,
                        req         >= 3.13.1 && < 3.14,
    hs-source-dirs:     src
    default-language:   Haskell2010
